--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
           android:versionCode="1"
      	  android:versionName="1.0">
     <uses-feature android:name="android.hardware.usb.host" />
-    <uses-sdk android:minSdkVersion="15" android:maxSdkVersion="21" android:targetSdkVersion="21"/>
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
