Fix: Set PumpID setting etc to be enabled on start (bug from side effect of removing Dexcom support) Fix: Crash from out of memory - allow  the app to use more via the largeheap setting.  Memory is most the logging cache so let's give it more headroom as we need the logs.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application  android:allowBackup="true"  android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+    <application  android:allowBackup="true"  android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:largeHeap="true">
         <!-- I have set screenOrientation to "portrait" to avoid the restart of AsyncTasks when you rotate the phone -->
          <activity
                 android:name=".dexcom.DexcomG4Activity"
