Cleanup; remove redundant or unsupportable pump messages.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
         targetSdkVersion 23
         versionCode gitVersionCode()
         versionName gitVersionName()
+        useLibrary 'org.apache.http.legacy'
     }
 
     buildTypes {
