--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion '26.0.2'
 
+    lintOptions {
+          abortOnError false
+      }
+
     defaultConfig {
         applicationId "com.nightscout.android"
         minSdkVersion 21
@@ -51,9 +55,6 @@ android {
 }
 
 dependencies {
-    compile files('libs/bugfender.jar')
-    compile files('libs/logback-android-1.1.1-3.jar')
-    compile files('libs/physicaloidlibrary.jar')
-    compile files('libs/slf4j-api-1.7.2.jar')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 }
