--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation 'com.github.felHR85:UsbSerial:4.5.2'
 }
