--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url "https://jitpack.io" }
     }
 }
